Proyecto2/k8s/go/deployment1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: proyecto2
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Desactiva redirección a HTTPS
spec:
  ingressClassName: nginx
  rules:
  - host: go-deployment1.34.122.73.35.nip.io
    http:
      paths:
      - path: /process
        pathType: Prefix
        backend:
          service:
            name: go-deployment1-service
            port:
              number: 8080
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: go-deployment1-service
            port:
              number: 8080
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: go-deployment1-service
            port:
              number: 8080
